# PBMC-reproducible

./: .gitattributes  .gitignore  Makefile  README.md  app.py  environment.yml  latest_python_stable_environment_no_streamlit.yml  openh5file.py  openingafile.py  pyproject.toml  requirements.txt  stable_environment.yml  streamlit_based_env.yml
.github/workflows/: 5_sigma_audit.yml
.streamlit/: config.toml
data/: Teichlab_curated_markers.json  annotation_manual.json  universal_ontology_id_dict.json
data/objects/: Dictionary_of_returns_from_orch_A.json  Dictionary_of_returns_from_orch_B.json  adata_project.h5ad  adata_project_macro_leiden_0.h5ad  adata_project_macro_leiden_1.h5ad  adata_project_macro_leiden_2_Terminal_State.h5ad  adata_train.h5ad  adata_train_macro_leiden_0.h5ad  adata_train_macro_leiden_1.h5ad  adata_train_macro_leiden_2_Terminal_State.h5ad  annotation_manual_empty.json  master_labels_df.csv  ontology_cl_id_manual_empty.json  pbmc3k_qc.h5ad  pbmc3k_qc_ML_Ready.h5ad
docs/: ToDo.md  roadmap.md
notebooks/: Comprehensive_Global_Cell_Ontology.csv  P01_qc_filtering.ipynb  P02_refined_clustering_projection.ipynb  P03_top_markers.ipynb  P04_annotation.ipynb  red_P04.ipynb  red_P04B06_checking.ipynb  red_P05_latent_geometry.ipynb  red_P06.ipynb  red_P07.ipynb
src/01_upstream_pipeline/: 02_forensic_knee_plot.py  03_reconstruct_matrices.py  P03a_forensic_knee_plot.py
src/02_analysis_scripts/: P02_matrix_construction.py  P03_qc_filtering.py  P04B_rmv_bio_cvrts.py  P04_clustering.py  P04_normalization.py  P05_latent_geometry.py  P05_top_markers.py  P06_annotation.py  P06_clustering.py  P07_UI_annotator.py  P07_markers_identity.py
src/pbmc3k_pipeline/: P03_qc_filtering.py  P04_clustering.py  P05_top_markers.py  P06_annotation.py  P07_UI_annotator.py
src/pbmc3k_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
