[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pbmc3k_pipeline"
version = "1.0.0"
description = "A reproducible, human-in-the-loop pipeline for single-cell PBMC3k analysis."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Sachin", email = "qgemai@proton.me" }
]

dependencies = [
    "scanpy>=1.11.5",
    "anndata==0.12.10",
    "pandas==2.3.3",
    "numpy==1.26.4",
    "streamlit==1.42.0",
    "scikit-learn",
    "pillow",
    "celltypist"
]

[project.scripts]
pbmc3k-ui = "app:main"