[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pbmc3k_pipeline"
version = "1.0.0"
description = "A reproducible, human-in-the-loop pipeline for single-cell PBMC3k analysis."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Sachin", email = "qgemai@proton.me" }
]

dependencies = [
    "numpy==2.4.3",
    "scipy==1.17.1",
    "pandas==2.3.3",
    "pynndescent==0.5.13",
    "umap-learn==0.5.11",
    "igraph==1.0.0",
    "leidenalg==0.11.0",
    "anndata==0.12.10",
    "scanpy==1.11.5",
    "scikit-learn",
    "celltypist",
    "pillow",
    "streamlit>=1.42.0"
]

[project.scripts]
pbmc3k-ui = "app:main"